feat: change Label filter to filters

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -121,7 +121,7 @@ layout: base.liquid
     <a href="#s-7"></a>
     <input type="checkbox" id="filter">
     <label aria-label="filter list" id="filter-button" class="filter-button" for="filter">
-        <h2>Filter</h2>
+        <h2>Filters</h2>
     </label>
 
     <div class="content">
