feat: updating legend filter icons

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -1286,6 +1286,7 @@ nav {
     height: 440px;
     margin: auto;
     border: 1px solid $midgreen;
+    z-index: 9;
     img{
       padding:0 10px 0 5px;
     }
