feat: add hatch imgs, increase legend icon size

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -1284,11 +1284,11 @@ nav {
     z-index: 9;
     img{
       padding:0 10px 0 5px;
+      height:18px;
     }
     table{
       span{
         font-size:14px;
-        font-style: italic;
       }
       tr{
         line-height: 1.7;
