--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -314,67 +314,67 @@ layout: base.liquid
 <table>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
     <td>Settlement <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img></td>
     <td>Settlement <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img></td>
     <td>Placename <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img></td>
     <td>Placename <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img></td>
     <td>Annotation <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img></td>
     <td>Annotation <span>(Haudenosaunee-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img></td>
     <td>Annotation <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img></td>
     <td>Colonial domain</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/vertical_hatch_grey_8C8C8C.webp' | url }}"></img></td>
     <td>Descriptions</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/principal_rivers.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/principal_rivers.webp' | url }}"></img></td>
     <td>River</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/pathways.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/pathways.webp' | url }}"></img></td>
     <td>Pathway</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/boundary.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/boundary.webp' | url }}"></img></td>
     <td>Boundary</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img></td>
     <td>Council fire</td>
   </tr>
 </table>
