deploy: 3edcd7cb21cc0ec95813e339a31679304fc989f9

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1121,10 +1121,10 @@ input#filter[type=checkbox]:checked ~ label.filter-button-bottom:hover:before {
 }
 #legend-wrapper .content img {
   padding: 0 10px 0 5px;
+  height: 18px;
 }
 #legend-wrapper .content table span {
   font-size: 14px;
-  font-style: italic;
 }
 #legend-wrapper .content table tr {
   line-height: 1.7;
