--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,10 +67,14 @@ body {
   font-family: "Jost", sans-serif;
 }
 body .container {
-  max-width: 1400px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 16px;
   font-size: 18px;
+}
+body .container img {
+  width: 100%;
+  height: auto;
 }
 body .container a {
   color: #132b19;
@@ -108,6 +112,8 @@ nav {
 }
 
 #mainmenu {
+  max-width: 1400px;
+  margin: 0 auto;
   /* end ol*/
 }
 #mainmenu .active {
