--- a/frontend/_includes/base.liquid
+++ b/frontend/_includes/base.liquid
@@ -21,6 +21,7 @@ title: BCC
 
     <title>{{ title }} | {{ metadata.title }}</title>
 
+    <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | url }}?ts={{ "now" | date: "%s" }}">
     <link rel="stylesheet" href="{{ '/assets/node_modules/leaflet/dist/leaflet.css' | url }}"/>
     <link rel="stylesheet" href="{{ '/assets/node_modules/leaflet-dvf/dist/css/dvf.css' | url }}"/>
