--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -20,7 +20,7 @@
     <div class="info">
         <ul>
             <li><a href="{{ "/accessibility" | url }}">Accessibility Statement</a></li>
-            <li><a href="{{ "/acknowledgements" | url }}">Credits &amp; Acknowledgements</a></li>
+            <li><a href="{{ "/about" | url }}">Credits &amp; Acknowledgements</a></li>
             <li>©2024 Brightening the Covenant Chain</li>
         </ul>
     </div>
