Update home.liquid; changed a link text to Map

--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -9,7 +9,7 @@ layout: base.liquid
                 Northeast. 
                 <br/>
                 <a href="{{ "about/" | url }}"><button>About</button></a>
-                <a href="{{ "stories/" | url }}"><button>Stories</button></a>
+                <a href="{{ "stories/" | url }}"><button>Map</button></a>
                 
             </div>
 
