Update footer.liquid; added trailing slashes to 2 urls to try fix bug

--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -19,8 +19,8 @@
     </div>
     <div class="info">
         <ul>
-            <li><a href="{{ "/accessibility" | url }}">Accessibility Statement</a></li>
-            <li><a href="{{ "/about" | url }}">Credits &amp; Acknowledgements</a></li>
+            <li><a href="{{ "/accessibility/" | url }}">Accessibility Statement</a></li>
+            <li><a href="{{ "/about/" | url }}">Credits &amp; Acknowledgements</a></li>
             <li>©2024 Brightening the Covenant Chain</li>
         </ul>
     </div>
