Update stories.liquid; TEST added link to Stories guide section of About page

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -38,7 +38,7 @@ layout: base.liquid
     <section id="guide">
         <article style="border:4px solid #4b5d04">
             <h2 style="text-align:center">How to use</h2>
-            <p>To explore the content, simply scroll down through the page - data display changes will precede the relevant text. You can also use the navigation menu to jump directly to specific sections. At the start of each section, you'll find engaging animations that highlight key message. The legend that pulls out on the right that clarifies the meaning of each symbol on the map. Filter through the data in the Explore section.</p>  
+            <p>To explore the content, simply scroll down through the page - data display changes will precede the relevant text. (See <a href="{{ "about/#stories-guide" | url }}">Stories guide</a> for details about the displays.) You can also use the navigation menu to jump directly to specific sections. At the start of each section, you'll find engaging animations that highlight key message. The legend that pulls out on the right that clarifies the meaning of each symbol on the map. Filter through the data in the Explore section.</p>  
             <p>Please note that due to the volume of data, loading times may vary, so patience is appreciated.</p>
             </article>
     </section>
