Update stories.liquid; aligned features list in filter box with list in legend box

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -238,24 +238,24 @@ layout: base.liquid
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
-                           data-filtervalue='{"sub_type":11, "identity":[3]}'
-                           class="explore_filter" id="checkbox6"/>
-                    <label for="checkbox6">
-                        <img src="{{ '/assets/img/stories/annotation_hauden.webp' | url }}" alt=""/><span>Haudenosaunee related annotations</span>
-                    </label>
-                </li>
-                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":11, "identity":[2]}'
                            class="explore_filter" id="checkbox7"/>
                     <label for="checkbox7">
-                        <img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}" alt=""/><span>Other indigenous related annotations</span>
+                        <img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}" alt=""/><span>Annotations (Indigenous-related)</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":11, "identity":[3]}'
+                           class="explore_filter" id="checkbox6"/>
+                    <label for="checkbox6">
+                        <img src="{{ '/assets/img/stories/annotation_hauden.webp' | url }}" alt=""/><span>Annotations (Haudenosaunee-related)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":11, "identity":[1]}'
                            class="explore_filter" id="checkbox8"/>
                     <label for="checkbox8">
-                        <img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}" alt=""/><span>European related annotations</span>
+                        <img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}" alt=""/><span>Annotations (European-related)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -314,42 +314,47 @@ layout: base.liquid
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/settlement_indig.webp' | url }}"></img></td>
-    <td>Settlement <span>(Indigenous)</span></td>
+    <td>Settlements <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/settlement_euro.webp' | url }}"></img></td>
-    <td>Settlement <span>(European)</span></td>
+    <td>Settlements <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/placename_indig.webp' | url }}"></img></td>
-    <td>Placename <span>(Indigenous)</span></td>
+    <td>Placenames <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/placename_euro.webp' | url }}"></img></td>
-    <td>Placename <span>(European)</span></td>
+    <td>Placenames <span>(European)</span></td>
+  </tr>
+  <tr>
+    <td>&nbsp;&nbsp;</td>
+    <td><img src="{{ '/assets/img/stories/council_fire.webp' | url }}"></img></td>
+    <td>Council fires</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}"></img></td>
-    <td>Annotation <span>(Indigenous)</span></td>
+    <td>Annotations <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/annotation_hauden.webp' | url }}"></img></td>
-    <td>Annotation <span>(Haudenosaunee-related)</span></td>
+    <td>Annotations <span>(Haudenosaunee-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}"></img></td>
-    <td>Annotation <span>(European)</span></td>
+    <td>Annotations <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/colonial_domain.webp' | url }}"></img></td>
-    <td>Colonial domain</td>
+    <td>Colonial domains</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
@@ -359,22 +364,17 @@ layout: base.liquid
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/river.webp' | url }}"></img></td>
-    <td>River</td>
+    <td>Rivers</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/pathway.webp' | url }}"></img></td>
-    <td>Pathway</td>
+    <td>Pathways</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/boundary.webp' | url }}"></img></td>
-    <td>Boundary</td>
-  </tr>
-  <tr>
-    <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/council_fire.webp' | url }}"></img></td>
-    <td>Council fire</td>
+    <td>Boundaries</td>
   </tr>
 </table>
 
