Update stories.liquid; aligned wording and order of features in legend and filter

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -339,7 +339,7 @@ layout: base.liquid
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}"></img></td>
-    <td>Annotations <span>(Indigenous)</span></td>
+    <td>Annotations <span>(Indigenous-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
@@ -349,7 +349,7 @@ layout: base.liquid
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}"></img></td>
-    <td>Annotations <span>(European)</span></td>
+    <td>Annotations <span>(European-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
