--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -136,37 +136,37 @@ layout: base.liquid
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
                            class="map_selector" id="mapcheckbox1"/>
                     <label for="mapcheckbox1">
-                        <img src="../assets/img/map-thumbs/1590-White.jpg" alt=""/><span>1590 <em>White</em></span>
+                        <img src="../assets/img/map-thumbs/1590-White.jpg" alt="Thumbnail image for White 1590 map"/><span>1590 <em>White</em></span>
                     </label>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="3"
                            class="map_selector" id="mapcheckbox2"/>
                     <label for="mapcheckbox2">
-                        <img src="../assets/img/map-thumbs/1676-Seller.jpg" alt=""><span>1676 <em>Seller</em></span>
+                        <img src="../assets/img/map-thumbs/1676-Seller.jpg" alt="Thumbnail image for Seller 1676 map"><span>1676 <em>Seller</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="5"
                            class="map_selector" id="mapcheckbox3"/>
                     <label for="mapcheckbox3">
-                        <img src="../assets/img/map-thumbs/1677-Foster.jpg" alt=""><span>1677 <em>Foster</em></span>
+                        <img src="../assets/img/map-thumbs/1677-Foster.jpg" alt="Thumbnail image for Foster 1677 map"><span>1677 <em>Foster</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="6"
                            class="map_selector" id="mapcheckbox4"/>
                     <label for="mapcheckbox4">
                         <img
-                                src="../assets/img/map-thumbs/1720-Moll.jpg" alt=""/><span>1720 <em>Moll</em></span>
+                                src="../assets/img/map-thumbs/1720-Moll.jpg" alt="Thumbnail image for Moll 1720 map"/><span>1720 <em>Moll</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="7"
                            class="map_selector" id="mapcheckbox5"/>
                     <label for="mapcheckbox5">
-                        <img src="../assets/img/map-thumbs/1738-Burghers.jpg" alt=""><span>1738 <em>Burghers</em></span>
+                        <img src="../assets/img/map-thumbs/1738-Burghers.jpg" alt="Thumbnail image for Burghers 1738 map"><span>1738 <em>Burghers</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="8"
                            class="map_selector" id="mapcheckbox6"/>
                     <label for="mapcheckbox6">
-                        <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt=""><span>1752 <em>Evans</em></span>
+                        <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt="Thumbnail image for Evans 1752 map"><span>1752 <em>Evans</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="12"
@@ -174,19 +174,19 @@ layout: base.liquid
                     <label for="mapcheckbox7">
                         <img
                                 src="../assets/img/map-thumbs/1755-Mitchell.jpg"
-                                alt=""/><span>1755 <em>Mitchell</em></span>
+                                alt="Thumbnail image for Mitchell 1755 map"/><span>1755 <em>Mitchell</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="17"
                            class="map_selector" id="mapcheckbox8"/>
                     <label for="mapcheckbox8">
-                        <img src="../assets/img/map-thumbs/1784-Buell.jpg" alt=""/><span>1784 <em>Buell</em></span>
+                        <img src="../assets/img/map-thumbs/1784-Buell.jpg" alt="Thumbnail image for Buell 1784 map"/><span>1784 <em>Buell</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="19"
                            class="map_selector" id="mapcheckbox9"/>
                     <label for="mapcheckbox9">
-                        <img src="../assets/img/map-thumbs/1796-Bradley.jpg" alt=""/><span>1796 <em>Bradley</em></span>
+                        <img src="../assets/img/map-thumbs/1796-Bradley.jpg" alt="Thumbnail image for Bradley 1796 map"/><span>1796 <em>Bradley</em></span>
                     </label>
                 </li>
 
@@ -206,91 +206,91 @@ layout: base.liquid
                            data-filtervalue='{"sub_type":4, "identity":[2]}'
                            class="explore_filter" id="checkbox1"/>
                     <label for="checkbox1">
-                        <img src="{{ '/assets/img/stories/settlement_indig.webp' | url }}" alt=""/><span>Settlements (Indigenous)</span>
+                        <img src="{{ '/assets/img/stories/settlement_indig.webp' | url }}" alt="Map filter box icon for Indigenous settlements"/><span>Settlements (Indigenous)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":4, "identity":[1]}'
                            class="explore_filter" id="checkbox2"/>
                     <label for="checkbox2">
-                        <img src="{{ '/assets/img/stories/settlement_euro.webp' | url }}" alt=""/><span>Settlements (European)</span>
+                        <img src="{{ '/assets/img/stories/settlement_euro.webp' | url }}" alt="Map filter box icon for European settlements"/><span>Settlements (European)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":10, "identity":[2]}'
                            class="explore_filter" id="checkbox3"/>
                     <label for="checkbox3">
-                        <img src="{{ '/assets/img/stories/placename_indig.webp' | url }}" alt=""/><span>Placenames (Indigenous)</span>
+                        <img src="{{ '/assets/img/stories/placename_indig.webp' | url }}" alt="Map filter box icon for Indigenous placenames"/><span>Placenames (Indigenous)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":10, "identity":[1]}'
                            class="explore_filter" id="checkbox4"/>
                     <label for="checkbox4">
-                        <img src="{{ '/assets/img/stories/placename_euro.webp' | url }}" alt=""/><span>Placenames (European)</span>
+                        <img src="{{ '/assets/img/stories/placename_euro.webp' | url }}" alt="Map filter box icon for European placenames"/><span>Placenames (European)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":12, "identity":[0]}'
                            class="explore_filter" id="checkbox5"/>
                     <label for="checkbox5">
-                        <img src="{{ '/assets/img/stories/council_fire.webp' | url }}" alt=""/><span>Council Fires</span>
+                        <img src="{{ '/assets/img/stories/council_fire.webp' | url }}" alt="Map filter box icon for council fires"/><span>Council Fires</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":11, "identity":[2]}'
                            class="explore_filter" id="checkbox7"/>
                     <label for="checkbox7">
-                        <img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}" alt=""/><span>Annotations (Indigenous-related)</span>
+                        <img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}" alt="Map filter box icon for Indigenous-related annotations"/><span>Annotations (Indigenous-related)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":11, "identity":[3]}'
                            class="explore_filter" id="checkbox6"/>
                     <label for="checkbox6">
-                        <img src="{{ '/assets/img/stories/annotation_hauden.webp' | url }}" alt=""/><span>Annotations (Haudenosaunee-related)</span>
+                        <img src="{{ '/assets/img/stories/annotation_hauden.webp' | url }}" alt="Map filter box icon for Haudenosaunee-related annotations"/><span>Annotations (Haudenosaunee-related)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":11, "identity":[1]}'
                            class="explore_filter" id="checkbox8"/>
                     <label for="checkbox8">
-                        <img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}" alt=""/><span>Annotations (European-related)</span>
+                        <img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}" alt="Map filter box icon for European-related annotations"/><span>Annotations (European-related)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":14, "identity":[0]}'
                            class="explore_filter" id="checkbox9"/>
                     <label for="checkbox9">
-                        <img src="{{ '/assets/img/stories/colonial_domain.webp' | url }}" alt=""/><span>Colonial domains</span>
+                        <img src="{{ '/assets/img/stories/colonial_domain.webp' | url }}" alt="Map filter box icon for colonial domains"/><span>Colonial domains</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":7, "identity":[0]}'
                            class="explore_filter" id="checkbox10"/>
                     <label for="checkbox10">
-                        <img src="{{ '/assets/img/stories/description.webp' | url }}" alt=""/><span>Descriptions</span>
+                        <img src="{{ '/assets/img/stories/description.webp' | url }}" alt="Map filter box icon for descriptions"/><span>Descriptions</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":8, "identity":[0]}'
                            class="explore_filter" id="checkbox11"/>
                     <label for="checkbox11">
-                        <img src="{{ '/assets/img/stories/river.webp' | url }}" alt=""/><span>Rivers</span>
+                        <img src="{{ '/assets/img/stories/river.webp' | url }}" alt="Map filter box icon for rivers"/><span>Rivers</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":5, "identity":[0]}'
                            class="explore_filter" id="checkbox12"/>
                     <label for="checkbox12">
-                        <img src="{{ '/assets/img/stories/pathway.webp' | url }}" alt=""/><span>Pathways</span>
+                        <img src="{{ '/assets/img/stories/pathway.webp' | url }}" alt="Map filter box icon for pathways"/><span>Pathways</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":3, "identity":[1]}'
                            class="explore_filter" id="checkbox13"/>
                     <label for="checkbox13">
-                        <img src="{{ '/assets/img/stories/boundary.webp' | url }}" alt=""/><span>Boundaries</span>
+                        <img src="{{ '/assets/img/stories/boundary.webp' | url }}" alt="Map filter box icon for boundaries"/><span>Boundaries</span>
                     </label>
                 </li>
             </ol>
@@ -313,67 +313,67 @@ layout: base.liquid
 <table>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/settlement_indig.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/settlement_indig.webp' | url }}" alt="Map legend icon for Indigenous settlements"></img></td>
     <td>Settlements <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/settlement_euro.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/settlement_euro.webp' | url }}" alt="Map legend icon for European settlements"></img></td>
     <td>Settlements <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/placename_indig.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/placename_indig.webp' | url }}" alt="Map legend icon for Indigenous placenames"></img></td>
     <td>Placenames <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/placename_euro.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/placename_euro.webp' | url }}" alt="Map legend icon for European placenames"></img></td>
     <td>Placenames <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/council_fire.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/council_fire.webp' | url }}" alt="Map legend icon for council fires"></img></td>
     <td>Council fires</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/annotation_indig.webp' | url }}" alt="Map legend icon for Indigenous-related annotations"></img></td>
     <td>Annotations <span>(Indigenous-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/annotation_hauden.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/annotation_hauden.webp' | url }}" alt="Map legend icon for Haudenosaunee-related annotations"></img></td>
     <td>Annotations <span>(Haudenosaunee-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/annotation_euro.webp' | url }}" alt="Map legend icon for European-related annotations"></img></td>
     <td>Annotations <span>(European-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/colonial_domain.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/colonial_domain.webp' | url }}" alt="Map legend icon for colonial domains"></img></td>
     <td>Colonial domains</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/description.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/description.webp' | url }}" alt="Map legend icon for descriptions"></img></td>
     <td>Descriptions</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/river.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/river.webp' | url }}" alt="Map legend icon for rivers"></img></td>
     <td>Rivers</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/pathway.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/pathway.webp' | url }}" alt="Map legend icon for pathways"></img></td>
     <td>Pathways</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img src="{{ '/assets/img/stories/boundary.webp' | url }}"></img></td>
+    <td><img src="{{ '/assets/img/stories/boundary.webp' | url }}" alt="Map legend icon for "boundaries"></img></td>
     <td>Boundaries</td>
   </tr>
 </table>
