--- a/frontend/_includes/nav.liquid
+++ b/frontend/_includes/nav.liquid
@@ -1,7 +1,7 @@
 {% assign navPages = collections.all | eleventyNavigation %}
 <nav>
     <div id="mainmenu">
-        <a id="sitetitle" href="/"><span>Movement and Common World in Early America</span><div class="subtitle">Homelands, Pathways and the Peoples of the Northeast</div></a>
+        <a id="sitetitle" href="/"><span>Movement and Common Worlds in Early America</span><div class="subtitle">Homelands, Pathways and the Peoples of the Northeast</div></a>
         <input id="menu" type="checkbox"/>
         <!--<img src="{{ '/assets/img/icons/font-awesome/bars-solid.svg' | url }}"/>-->
         <label class="menu" role="button" for="menu">Menu</label>
