--- a/frontend/_includes/base.liquid
+++ b/frontend/_includes/base.liquid
@@ -26,7 +26,7 @@ title: BCC
     <link rel="stylesheet" href="{{ '/assets/node_modules/leaflet/dist/leaflet.css' | url }}"/>
     <link rel="stylesheet" href="{{ '/assets/node_modules/leaflet-dvf/dist/css/dvf.css' | url }}"/>
     <!-- Goat counter analytics -->
-    <script data-goatcounter="https://kdl.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="https://treatiedspaces.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
     <script src="{{ '/assets/js/navbar-toggle.js' | url }}?ts={{ "now" | date: "%s" }}"></script>
 
     <style>
