--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -48,7 +48,7 @@ layout: base.liquid
         <article class="storyTitle">
             <h2>Overview</h2>
         </article>
-        {% renderFile "./stories/overview.md", "liquid" %}
+        {% renderFile "./stories/overview.md" %}
 
         <div class="article_spacer">&nbsp;</div>
     </section>
@@ -58,7 +58,7 @@ layout: base.liquid
             <h2>Introduction</h2>
         </article>
         <div class="article_spacer">&nbsp;</div>
-        {% renderFile "./stories/introduction.md", "liquid" %}
+        {% comment %}{% renderFile "./stories/introduction.md" %}{% endcomment %}
     </section>
 
     <section id="s-2" class="sectionContainer">
@@ -69,7 +69,7 @@ layout: base.liquid
         </article>
         <div class="article_spacer">&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
-        {% renderFile "./stories/homelands.md", "liquid" %}
+        {% comment %}{% renderFile "stories/homelands.md" %}{% endcomment %}
     </section>
     <section id="s-3" class="sectionContainer">
         <div class="storyTitleSpacerAbove"></div>
@@ -80,7 +80,7 @@ layout: base.liquid
         </article>
         <div class="article_spacer">&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
-        {% renderFile "./stories/pathways.md", "liquid" %}
+        {% comment %}{% renderFile "stories/pathways.md" %}{% endcomment %}
     </section>
     <section id="s-4" class="sectionContainer">
         <div class="storyTitleSpacerAbove" id="s4-start"></div>
@@ -89,7 +89,7 @@ layout: base.liquid
         </article>
         <div class="article_spacer">&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
-        {% renderFile "./stories/villagers_settlers.md", "liquid" %}
+        {% comment %}{% renderFile "stories/villagers_settlers.md" %}{% endcomment %}
     </section>
     <section id="s-5" class="sectionContainer">
         <div class="storyTitleSpacerAbove" id="s5-start"></div>
@@ -98,7 +98,7 @@ layout: base.liquid
         </article>
         <div class="article_spacer">&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
-        {% renderFile "./stories/lines.md", "liquid" %}
+        {% comment %}{% renderFile "stories/lines.md" %}{% endcomment %}
     </section>
 
     <section id="s-6" class="sectionContainer">
