upgraded 11ty, added new img plugin

--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -3,17 +3,17 @@
         <h4>Partners <span>&</span> Funders</h4>
         <div class="logo">
             <a href="//kdl.kcl.ac.uk/">
-                {% image "assets/img/logos/KCL.png", "King's College London logo", "300, 600" %}
+                <img src="/assets/img/logos/KCL.png" alt="King's College London logo"/>
             </a>
         </div>
         <div class="logo">
             <a href="//treatiedspaces.com/">
-                {% image "assets/img/logos/treatied_spaces.png", "Treatied spaces", "300, 600" %}
+                <img src="/assets/img/logos/treatied_spaces.png" alt="Treatied spaces"/>
             </a>
         </div>
         <div class="logo">
             <a href="//www.ukri.org/about-us/ahrc/">
-                {% image "assets/img/logos/ahrc_2.png", "Treatied spaces", "300, 600" %}
+                <img src="/assets/img/logos/ahrc_2.png" alt="Arts & Humanities Research Council Logo"/>
             </a>
         </div>
     </div>
