update node module imports

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -387,10 +387,10 @@ layout: base.liquid
 
 <script defer type="text/javascript" src="{{ '/assets/vendor/leaflet/dist/leaflet.js' | url }}"></script>
 <script defer type="text/javascript" src="{{ '/assets/vendor/leaflet-dvf/dist/leaflet-dvf.js' | url }}"></script>
-<script defer type="text/javascript" src="{{ '/assets/vendor/leaflet-textpath/leaflet.text.path.js' | url }}"></script>
+<script defer type="text/javascript" src="{{ '/assets/vendor/leaflet-textpath/leaflet.textpath.js' | url }}"></script>
 <!--<script defer type="text/javascript"
         src="{{ '/assets/js/leaflet/plugins/leaflet-polygon.fillPattern.js' | url }}"></script>-->
-<script defer type="text/javascript" src="{{ '/assets/node_modules/d3/dist/d3.min.js' | url }}"></script>
+<script defer type="text/javascript" src="{{ '/assets/vendor/d3/dist/d3.min.js' | url }}"></script>
 
 <script>
 
