node modules path copy fix for d3

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -386,7 +386,7 @@ layout: base.liquid
 </div>
 
 <script defer type="text/javascript" src="{{ '/assets/vendor/leaflet/dist/leaflet.js' | url }}"></script>
-<script defer type="text/javascript" src="{{ '/assets/vendor/leaflet-dvf/dist/leaflet-dvf.js' | url }}"></script>
+<script defer type="text/javascript" src="{{ '/assets/vendor/leaflet-dvf/dist/leaflet-dvf.min.js' | url }}"></script>
 <script defer type="text/javascript" src="{{ '/assets/vendor/leaflet-textpath/leaflet.textpath.js' | url }}"></script>
 <!--<script defer type="text/javascript"
         src="{{ '/assets/js/leaflet/plugins/leaflet-polygon.fillPattern.js' | url }}"></script>-->
