--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -402,9 +402,9 @@ layout: base.liquid
     let storyURIs = {
         storyFrame: "{{ '/assets/json/BCC_storyframe.json' | url }}",
         slides: "{{ '/assets/json/BCC_slides.json' | url }}",
-        lines: "{{ '/assets/json/BCC_lines.json' | url }}",
-        points: "{{ '/assets/json/BCC_points.json' | url }}",
-        polys: "{{ '/assets/json/BCC_polys.json' | url }}",
+        lines: "{{ '/assets/json/BCC_lines.json.gz' | url }}",
+        points: "{{ '/assets/json/BCC_points.json.gz' | url }}",
+        polys: "{{ '/assets/json/BCC_polys.json.gz' | url }}",
         indigenous: "{{ '/assets/json/indigenous_territories.json' | url }}",
         homelands: "{{ '/assets/json/BCC_homelands.json' | url }}",
 
