deploy: cd646e09cbd50a8db7354087b91be34241875c54

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1286,6 +1286,10 @@ path.leaflet-interactive {
     min-width: 250px;
   }
 }
+#legend-wrapper .content img {
+  width: auto;
+}
+
 @media only screen and (max-width: 600px) {
   body .container {
     padding: 0 1%;
